@@ -42,6 +42,7 @@ COM_CATEGORIES_NO_ITEM_SELECTED="No Categories selected"
 COM_CATEGORIES_REBUILD_FAILURE="Failed rebuilding Categories tree data."
 COM_CATEGORIES_REBUILD_SUCCESS="Categories tree data successfully rebuilt."
 COM_CATEGORIES_SAVE_SUCCESS="Category successfully saved"
+COM_CATEGORIES_OPTION_SELECT_LEVEL="- Select Max Levels -"
 COM_CATEGORIES_XML_DESCRIPTION="This component manages categories"
 COM_CATEGORY_ACCESS_CREATE="Create"
 COM_CATEGORY_ACCESS_CREATE_DESC="Shown below is the inherited state for <strong>create actions</strong> on this category and the calculated state based on the menu selection."
